# chembl_gen_check

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scripts/: chembl_filter.py  chembl_filters.py
src/chembl_gen_check/: __init__.py  create_mol_filters.py  lacan.py
src/chembl_gen_check/data/: chembl_lacan.pkl  chembl_ring_system.bloom  chembl_scaffold.bloom  chembl_skeleton.bloom  surechembl_ring_system.bloom
src/genval/: __init__.py  lacan.py
src/genval/data/: chembl_lacan.pkl  chembl_ring_system.bloom  chembl_scaffold.bloom
test/: test.py
