[project]
name = "chembl_gen_check"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["molbloom==2.2.1", "rdkit>=2022.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["chembl_gen_check/data/chembl_scaffold.bloom", "chembl_gen_check/data/chembl_ring_system.bloom", "chembl_gen_check/data/chembl_lacan.pkl"]

[tool.hatch.build.targets.wheel]
packages = ["src/chembl_gen_check"]